user image helper

--- a/app/views/pages/card_all.ejs
+++ b/app/views/pages/card_all.ejs
@@ -15,7 +15,7 @@
         <ul class="clearfix cards">
 			<% for (var i = 0; i < cards.length; i++) {	%>
 				<li>
-                    <div class="wrapper">
+                    <div class="module_card">
     					<a href="/cards/<%= cards[i]._id %>">
                             <div><img src="<%= cards[i].image %>" width="200px" height="150px"  /></div>
                             <div><%= cards[i].title %></div>
