--- a/app/views/pages/user_edit.ejs
+++ b/app/views/pages/user_edit.ejs
@@ -14,7 +14,7 @@
           <label for="name">Profile Picture</label>
           <div class="clearfix">
 
-            <div style="float:left;"><img src="<%= user.profile.picture || user.gravatar(64) %>"  /> </div>
+            <div style="float:left;"><img src="<%= user.gravatar(64) %>"  /> </div>
             <div style="float:left;float: left; width: 340px; margin-left: 20px;">
               <input type="file" name="picture" id="fileControl" style="display:none;">
               <input class="btn btn__secondary" type="button" value="Change" onclick="document.getElementById('fileControl').click()">
