--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,24 +73,19 @@ a:hover {
 }
 .cards li {
     float: left; 
-    width: 21.680412371134%;
+    min-width: 300px;
     margin: 0 4.166666666667% 30px 0;
     margin-right: 3.092783505155%;
 }
-.cards li > .wrapper {
-    background: #fff;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-    padding: 12px;
-    text-align: center;
-}
-.cards li > .wrapper a {
+
+
+
+
+
+.cards li > .module_card a {
     display:block;
     color: #333;
+    text-align: center;
 }
 .cards li img {
   max-width: 100%;
@@ -294,3 +289,17 @@ img {
   color: #B3899B;
   font-size: 1.5em;
 }
+
+
+
+.module_card {
+  background: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  padding: 12px;
+}
+
