--- a/app/views/partials/global_nav.ejs
+++ b/app/views/partials/global_nav.ejs
@@ -39,7 +39,7 @@
 				<% } %>
 	    	</div>
 	        <a href="/" >
-	        	<img src="https://bocoup.com/img/site/bocoup-50.png" class="logo"> 
+	        	<img src="/img/assets/logo.png" class="logo"> 
 	        	<span class="ir">Greeting Rooster</span>
 	        </a> 
         </div>
